<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvSchemeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/scheme_title"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:text="@string/type_title"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tvSchemeTitle"
        app:layout_constraintTop_toTopOf="@+id/tvSchemeTitle" />

    <Button
        android:id="@+id/bSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        app:layout_constraintBottom_toBottomOf="@+id/DataField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DataField"
        app:layout_constraintTop_toTopOf="@+id/DataField" />

    <AutoCompleteTextView
        android:id="@+id/DataField"
        android:layout_width="281dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/data_field_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBankPhoneNumber" />

    <TextView
        android:id="@+id/tvScheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/cap"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvSchemeTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvSchemeTitle" />

    <TextView
        android:id="@+id/tvBrandTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/brand_title"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvSchemeTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvScheme" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/cap"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvTypeTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTypeTitle" />

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/cap"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvBrandTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvBrandTitle" />

    <TextView
        android:id="@+id/tvPrepaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/cap"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvPrepaidTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvPrepaidTitle" />

    <TextView
        android:id="@+id/tvPrepaidTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/prepaid_title"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvTypeTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvType" />

    <TextView
        android:id="@+id/tvCardNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/card_number_title"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvSchemeTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvBrand" />

    <TextView
        android:id="@+id/tvCardNumberLengthTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/number_length_title"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tvCardNumberTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvCardNumberTitle" />

    <TextView
        android:id="@+id/tvCardNumberLuhnTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/number_luhn_title"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tvCardNumberTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvCardNumberTitle" />

    <TextView
        android:id="@+id/tvCardNumberLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/cap"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvCardNumberTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvCardNumberLengthTitle" />

    <TextView
        android:id="@+id/tvCardNumberLuhn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/cap"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvCardNumberLuhnTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvCardNumberLuhnTitle" />

    <TextView
        android:id="@+id/tvCountryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/country_title"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvTypeTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvPrepaid" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/cap"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvCountryTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvCountryTitle" />

    <TextView
        android:id="@+id/tvCountryLatitudeAndLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cap"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tvCountry"
        app:layout_constraintTop_toBottomOf="@+id/tvCountry" />

    <TextView
        android:id="@+id/tvBankTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/bank_title"
        app:layout_constraintStart_toStartOf="@+id/tvCardNumberLength"
        app:layout_constraintTop_toBottomOf="@+id/tvCardNumberLength" />

    <TextView
        android:id="@+id/tvBankAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cap"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvBankTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvBankTitle" />

    <TextView
        android:id="@+id/tvBankPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cap"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvBankTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvBankWebsite" />

    <TextView
        android:id="@+id/tvBankWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cap"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvBankTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvBankAddress" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:listitem="@layout/recyclerview_history_item" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/history_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DataField" />

</androidx.constraintlayout.widget.ConstraintLayout>